fixed formatting error on mobile

--- a/styleHandheld.css
+++ b/styleHandheld.css
@@ -31,7 +31,7 @@ body {
 }
 
 .propic {
-    border-radius:50%;
+    width: 100%;
 }
 
 .bg {
